GNOME Bugzilla – Bug 612454
fix compile errors in latest gst-plugins-bad
Last modified: 2010-03-11 17:00:47 UTC
Created attachment 155761 [details] [review] qtmux: fix compile error attached patches fix the following two compile errors: gst/qtmux/gstqtmoovrecover.c:268: warning: format not a string literal and no format arguments gst/mpeg4videoparse/mpeg4videoparse.c:689: warning: comparison is always true due to limited range of data type
Created attachment 155762 [details] [review] mpeg4videoparse: fix compile error
Created attachment 155769 [details] [review] fix trace macro typo
Created attachment 155771 [details] [review] fix compile error with trace macro note that this one isn't a problem with the current trace macros in gstreamer.git tree.. but causes problems with some replacement trace macros that I use which expect to be able to concatenate to the fmt string, ie. something roughly like: #define GST_CAT_LEVEL_LOG_obj(cat,level,object,str,args...) G_STMT_START{ \ if (G_UNLIKELY (level <= __gst_debug_min)) { \ const GstDebugTraceLocation loc = GST_DEBUG_TRACE_LOCATION(); \ gst_debug_log2 ((cat), (level), &loc, NULL, "<%"GST_PTR_FORMAT"> "str, \ (object), ##args ); \ } \ }G_STMT_END so this 4th patch isn't strictly required. But it has no downside and it saves me from having to re-patch my local code every time I update to newer gst-plugins-bad ;-)
commit c3156f06636004d868913dbc9ed5baba826411a8 Author: Rob Clark <rob@ti.com> Date: Wed Mar 10 11:50:47 2010 -0600 fix compile error with trace macro Note that this one isn't a problem with normal trace macros, but causes problems with some replacement trace macros that I use, which expect the format string to be appendable (ie "foo "fmt in the macro) https://bugzilla.gnome.org/show_bug.cgi?id=612454 commit 554e0fc5444bb4d7cad466f43a378278b24e250b Author: Rob Clark <rob@ti.com> Date: Wed Mar 10 11:49:22 2010 -0600 fix trace macro typo https://bugzilla.gnome.org/show_bug.cgi?id=612454 commit 79faa0b9fa46b03da46e0739093b8a9c3bc372c2 Author: Rob Clark <rob@ti.com> Date: Wed Mar 10 10:26:27 2010 -0600 mpeg4videoparse: fix compile error gst/mpeg4videoparse/mpeg4videoparse.c:689: warning: comparison is always true due to limited range of data type https://bugzilla.gnome.org/show_bug.cgi?id=612454 commit 71d0e513fafe67ca5a5d10cf04d19410beadfde9 Author: Rob Clark <rob@ti.com> Date: Wed Mar 10 10:23:23 2010 -0600 qtmux: fix compile error gst/qtmux/gstqtmoovrecover.c:268: warning: format not a string literal and no format arguments https://bugzilla.gnome.org/show_bug.cgi?id=612454